# CommunicationAnalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml  verify-dev.yml
cmake/: InstallUpdate.ps1  RunAfterBuild.ps1  WIX.template.in
docs/: RELEASE_WORKFLOW.md
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/communication/: SerialController.cpp  SerialController.h
src/pages/: AboutPage.cpp  AboutPage.h  MonitorPage.cpp  MonitorPage.h  SettingPage.cpp  SettingPage.h
src/update/: UpdateManager.cpp  UpdateManager.h
src/widgets/: TrafficTextEdit.cpp  TrafficTextEdit.h
